--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,39 +1,43 @@
+{% set version = "0.0.2" %}
+
 package:
-    name: pynco
-    version: 0.0.2
+  name: pynco
+  version: {{ version }}
 
 source:
-    git_url: https://github.com/nco/pynco.git
-    git_tag: 0.0.2
+  fn: pynco-{{ version }}.tar.gz
+  url: https://github.com/nco/pynco/archive/{{ version }}.tar.gz
+  sha256: c3f3155d13bc4dd05df791f2e2e212e33890e216e3c10e4e43e2d3276a427d22
 
 build:
-    number: 0
-    skip: True  # [win]
-    script: python setup.py install --single-version-externally-managed --record=record.txt
+  number: 0
+  skip: True  # [win]
+  script: python setup.py install --single-version-externally-managed --record=record.txt
 
 requirements:
-    build:
-        - python
-        - setuptools
-    run:
-        - python
-        - python-dateutil
-        - h5py
-        - netcdf4
-        - numpy
-        - scipy
-        - nco
+  build:
+    - python
+    - setuptools
+  run:
+    - python
+    - python-dateutil
+    - h5py
+    - netcdf4
+    - numpy
+    - scipy
+    - nco
 
 test:
-    imports:
-        - nco
+  imports:
+    - nco
 
 about:
-    home: https://github.com/nco/pynco
-    license: GPLv2
-    summary: Python bindings to NCO
+  home: https://github.com/nco/pynco
+  license: GPL-2.0
+  license_file: LICENSE.txt
+  summary: 'Python bindings to NCO.'
 
 extra:
-    recipe-maintainers:
-        - jhamman
-        - ocefpaf
+  recipe-maintainers:
+    - jhamman
+    - ocefpaf
