--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,15 @@
-{% set version = "0.0.3" %}
+{% set name = "pynco" %}
+{% set version = "0.0.4" %}
+{% set sha256 = "42ae74cac2fb66c9902b794ece630d52045f2b00786fcab4155609498e0a3c57" %}
 
 package:
-  name: pynco
+  name: {{ name }}
   version: {{ version }}
 
 source:
-  fn: pynco-{{ version }}.tar.gz
-  url: https://github.com/nco/pynco/archive/{{ version }}.tar.gz
-  sha256: 17b85ee9675c1144e328516adbecd1383f37a69a87bb65eb4f616eee95253ccf
+  fn: {{ name }}-{{ version }}.tar.gz
+  url: https://github.com/nco/{{ name }}/archive/{{ version }}.tar.gz
+  sha256: {{ sha256 }}
 
 build:
   number: 0
