Revert "bump for 1.0.0"
This reverts commit 83171550ac60cc6c43a87383a8f03e885e0725ad.

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,6 +1,6 @@
 {% set name = "pynco" %}
-{% set version = "1.0.0" %}
-{% set sha256 = "7949fabe691ae7da3d9b9331b0983e815713636c" %}
+{% set version = "0.0.4" %}
+{% set sha256 = "42ae74cac2fb66c9902b794ece630d52045f2b00786fcab4155609498e0a3c57" %}
 
 package:
   name: {{ name }}
@@ -15,7 +15,6 @@ build:
   number: 0
   noarch: python
   script: python -m pip install --no-deps --ignore-installed .
-  skip: true  # [py<35]
 
 requirements:
   build:
@@ -23,6 +22,12 @@ requirements:
     - pip
   run:
     - python
+    - python-dateutil
+    - h5py
+    - netcdf4
+    - numpy
+    - scipy
+    - nco
 
 test:
   imports:
@@ -30,7 +35,7 @@ test:
 
 about:
   home: https://github.com/nco/pynco
-  license: MIT
+  license: GPL-2.0
   license_file: LICENSE.txt
   summary: 'Python bindings to NCO.'
 
