--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -31,7 +31,7 @@ test:
 
 about:
   home: https://github.com/nco/pynco
-  license: GPL-2.0
+  license: MIT
   license_file: LICENSE.txt
   summary: 'Python bindings to NCO.'
 
